--- a/cliente/package.json
+++ b/cliente/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "browser-router": "^0.2.0",
     "firebase": "^11.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
