--- a/cliente/package.json
+++ b/cliente/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.2.0",
     "browser-router": "^0.2.0",
     "firebase": "^11.0.2",
     "jspdf": "^2.5.2",
